deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quickmark-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quickmark-server
  template:
    metadata:
      labels:
        app: quickmark-server
    spec:
      containers:
      - name: server
        image: your-registry/quickmark-server:latest #your-registry: from Taikun UI: your private image registry path
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
