service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickmark-server
spec:
  type: ClusterIP
  selector:
    app: quickmark-server
  ports:
    - port: 80
      targetPort: 80
